--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
     "name": "paypal/rest-api-sdk-php",
     "description": "PayPal's PHP SDK for REST APIs",
-    "keywords": ["paypal", "payments", "rest", "sdk"],
+    "keywords": [
+        "paypal",
+        "payments",
+        "rest",
+        "sdk"
+    ],
     "type": "library",
     "license": "Apache-2.0",
     "homepage": "http://paypal.github.io/PayPal-PHP-SDK/",
@@ -14,8 +19,7 @@
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*",
-        "ext-json": "*",
-        "psr/log": "^1.0.0"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35"
